--- a/T1.css
+++ b/T1.css
@@ -378,10 +378,12 @@ ul li:not(:last-child) {
 }
 
 .protofolio-content {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap:15px;
+    width: 90%;
     padding: 50px 0 30px;
-    margin: 20px;
+    margin: 20px auto;
     justify-items: center;
 }
 
@@ -395,7 +397,6 @@ ul li:not(:last-child) {
     border-radius: 5px;
     overflow: hidden;
     margin: 40px auto;
-    width: 380px;
     background-color: white;
 }
 
@@ -415,20 +416,37 @@ ul li:not(:last-child) {
     color: #777;
     margin: 0;
 }
-
 .protofolio-content .card .img img {
     width: 100%;
-    height: 240px;
+    min-height: 250px;
 }
-
+@media (max-width:1039px){
+    .protofolio-content .card .img img {
+        width: 100%;
+        min-height: 200px;
+    }
+    .protofolio-content .card .text p {
+        font-size: 12px;
+    }
+}
+@media (max-width:900px){
+    .protofolio-content .card .img img {
+        width: 100%;
+        min-height: 160px;
+    }
+}
+@media (max-width:767px){
+    .protofolio-content {
+        display: grid;
+        grid-template-columns: 1fr;}
+    .protofolio-content .card .img img {
+        width: 100%;
+        min-height: auto;
+    }
+}
 @media (max-width:850px) {
     .protofolio-content .card {
         height: fit-content;
-    }
-
-    .protofolio-content .card .img img {
-        width: 100%;
-        height: 260px;
     }
 }
 .protofolio-content~ .buttonDiv{
@@ -459,14 +477,21 @@ display: flex;
     overflow: hidden;
     margin-top: 100px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     padding: 100px;
 }
-
 .about-content .image {
     position: relative;
-    max-width: 300px;
+    width: 25%;
+    height: 50%;
+}
+@media (max-width:1039px){
+    .about .about-content {
+        padding:50px 30px 50px 80px;
+    }
+    .about-content .image {
+        max-width: 200px;
+    }
 }
 
 .about-content .image::before {
@@ -494,20 +519,52 @@ display: flex;
 }
 
 .about-content .text {
+    width: 75%;
     padding: 0 0 0 140px;
+}
+@media (max-width:777px){
+    .about .about-content{
+        flex-wrap: wrap;
+        padding:50px 30px
+    }
+    .about-content .image::after {
+        top:-10px;
+    height: 280px;
+    border-left: 60px solid #39a5b5;
+    border-bottom: 60px solid #39a5b5;
+    }
+    .about-content .image::before {
+        top:-20px;
+        height: 115%;
+    }
+    .about .about-content .image {
+        width: 100%;
+        margin:0 0 60px 20%;
+    }
+    .about-content .text {
+        width:100%
+    }
 }
 
 .about-content .text p:first-child {
     font-weight: bold;
     margin-bottom: 40px;
-    line-height: 2;
+    line-height: 1.5;
 }
 
 .about-content .text p:last-child {
-    line-height: 2;
+    line-height: 1.5;
     color: #777;
 }
-
+@media (max-width:1039px) {
+    .about-content .text p:first-child {
+        font-size: 13px;
+    }
+    
+    .about-content .text p:last-child {
+        font-size: 11px;
+    }
+}
 .about-content .text hr {
     width: 50%;
     text-align: start;
@@ -515,28 +572,13 @@ display: flex;
     border-color: var(--mean-color);
 }
 
-@media (max-width:991px) {
+@media (max-width:767px) {
     .about-content .text {
         padding: 0;
     }
-
-    .about .about-content {
-        flex-direction: column;
-        padding: 30px;
-    }
-
-    .about .about-content .image {
-        margin: 0 auto 60px;
-    }
-
     .about-content .text p:first-child {
         font-weight: bold;
         margin-bottom: 20px;
-        line-height: 1.5;
-    }
-
-    .about-content .text p:last-child {
-        line-height: 1.6;
     }
 }
 
@@ -554,6 +596,7 @@ img {
 }
 
 .contact {
+    padding-bottom:100px;
     margin-bottom: 80px;
 }
 
@@ -573,6 +616,8 @@ img {
     color: var(--sec-color);
 }
 @media (max-width:1039px) {
+    .contact {
+        padding-bottom:0px;}
     .contact-content {
     padding: 70px 10% 0;
     }   
